fix double scroll

--- a/src/app.css
+++ b/src/app.css
@@ -6,10 +6,8 @@ html,
 body {
     background-color: black;
     color: white;
-    height: 100%;
     padding: 0;
     margin: 0;
-    overflow: auto;
 }
 
 h1 {
